--- a/category.html
+++ b/category.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Goldish</title>
+    <title>Categories</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -28,7 +28,7 @@
             <nav class="nav-menu">
               <ul class="nav-list">
                 <li class="nav-item">
-                  <a href="#home" class="nav-link">Home </a>
+                  <a href="index.html" class="nav-link">Home </a>
                 </li>
                 <li class="nav-item">
                   <a href="#featured" class="nav-link">Featured</a>
@@ -191,7 +191,6 @@
       </div>
 
       <div class="cart__prices">
-        <span class="cart__prices-item">3 items</span>
         <span class="cart__prices-total">$2880</span>
       </div>
     </div>
@@ -210,15 +209,47 @@
           </li>
 
           <li class="breadcrumb-item">
-            <a href="#" class="breadcrumb-link">Golden Rings</a>
-          </li>
-
-          <li class="breadcrumb-item">
-            <a href="#" class="breadcrumb-link selected"
-              >18k Rose Gold Diamond Plated Ring</a
-            >
+            <a href="#" class="breadcrumb-link selected">Golden Rings</a>
           </li>
         </ul>
+      </section>
+
+      <section class="category">
+        <div class="container category-container">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="cate-sidebar">
+                <div class="cate-sidebar-item">
+                  <h4 class="cate-sidebar-item-title">Categories</h4>
+                  <div class="cate-sidebar-item-data">
+                    <ul class="cate-sidebar-item-list">
+                      <li>
+                        <a href="#" class="cate-sidebar-item-link">
+                          Elegant Collections (6)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="cate-sidebar-item-link">
+                          Gold rings (4)
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#" class="cate-sidebar-item-link">
+                          Stylish Bracelets (2)
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="cate-sidebar-item">
+                  <h4 class="cate-sidebar-item-title">Categories</h4>
+                  <div class="cate-sidebar-item-data"></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-9"></div>
+          </div>
+        </div>
       </section>
     </main>
 
@@ -358,7 +389,6 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="bx bx-up-arrow-alt scrollup__icon"></i>
     </a>
-
     <!--=============== JQUERY JS ===============-->
     <script src="./js/jquery-3.6.1.min.js"></script>
     <!--=============== BOOTSTRAP JS ===============-->
