--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Goldish</title>
+    <title>Contact</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -48,14 +48,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Rings</a>
+                      <a class="nav-link" href="#">For Him</a>
                     </li>
 
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Bracelet</a>
+                      <a class="nav-link" href="#">For Her</a>
                     </li>
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Necklace</a>
+                      <a class="nav-link" href="#">For Friends</a>
                     </li>
                   </ul>
                 </li>
@@ -116,7 +116,7 @@
       <div class="cart__prices">
         <span class="cart__prices-item">Total</span>
         <span class="cart__prices-total"
-          >$ <span class="cart-total"></span>
+          ><span class="cart-total"></span>đ
         </span>
       </div>
     </div>
@@ -219,12 +219,13 @@
 
           <div class="responsive-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2822.7806761080233!2d-93.29138368446431!3d44.96844997909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b6ee2c87c91%3A0xc20dff2748d2bd92!2sWalker+Art+Center!5e0!3m2!1sen!2sus!4v1514524647889"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d85801.92214875016!2d106.62596271787105!3d10.838359534775524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752c71890432e9%3A0x8c1dd02c9561d8ab!2zM2MgxJDGsOG7nW5nIHPhu5EgNCwgQsOsbmggSMawbmcgSG_DoCBBLCBCw6xuaCBUw6JuLCBUaMOgbmggcGjhu5EgSOG7kyBDaMOtIE1pbmgsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1679899673394!5m2!1svi!2s"
               width="100%"
-              height="400px"
-              frameborder="0"
+              height="600"
               style="border: 0"
-              allowfullscreen
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
         </div>
