--- a/about-us.html
+++ b/about-us.html
@@ -48,14 +48,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Rings</a>
+                      <a class="nav-link" href="#">For Him</a>
                     </li>
 
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Bracelet</a>
+                      <a class="nav-link" href="#">For Her</a>
                     </li>
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Necklace</a>
+                      <a class="nav-link" href="#">For Friends</a>
                     </li>
                   </ul>
                 </li>
@@ -116,7 +116,7 @@
       <div class="cart__prices">
         <span class="cart__prices-item">Total</span>
         <span class="cart__prices-total"
-          >$ <span class="cart-total"></span>
+          ><span class="cart-total"></span>đ
         </span>
       </div>
     </div>
