--- a/category.html
+++ b/category.html
@@ -55,14 +55,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Rings</a>
+                      <a class="nav-link" href="#">For Him</a>
                     </li>
 
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Bracelet</a>
+                      <a class="nav-link" href="#">For Her</a>
                     </li>
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Necklace</a>
+                      <a class="nav-link" href="#">For Friends</a>
                     </li>
                   </ul>
                 </li>
@@ -123,7 +123,7 @@
       <div class="cart__prices">
         <span class="cart__prices-item">Total</span>
         <span class="cart__prices-total"
-          >$ <span class="cart-total"></span>
+          ><span class="cart-total"></span>đ
         </span>
       </div>
     </div>
@@ -213,78 +213,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- item -->
-                <div class="cate-sidebar-item">
-                  <h4 class="cate-sidebar-item-title">Filter By Gem</h4>
-                  <div class="cate-sidebar-item-data">
-                    <div class="d-flex flex-column">
-                      <label class="pd-details-option-size"
-                        >Ruby
-                        <input
-                          type="checkbox"
-                          class="size-input"
-                          checked="checked"
-                        />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >Diamond
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >Lapiz
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >Jade
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <!-- end of item -->
-                <!-- item -->
-                <div class="cate-sidebar-item">
-                  <h4 class="cate-sidebar-item-title">Filter By Size</h4>
-                  <div class="cate-sidebar-item-data">
-                    <div class="d-flex flex-column">
-                      <label class="pd-details-option-size"
-                        >6
-                        <input
-                          type="checkbox"
-                          class="size-input"
-                          checked="checked"
-                        />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >7
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >8
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-
-                      <label class="pd-details-option-size"
-                        >9
-                        <input type="checkbox" class="size-input" />
-                        <span class="checkmark"></span>
-                      </label>
-                    </div>
-                  </div>
-                </div>
-                <!-- end of item -->
 
                 <!-- item -->
                 <div class="cate-sidebar-item">
