--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Goldish</title>
+    <title>OH'KRAFT</title>
   </head>
 
   <body>
@@ -50,14 +50,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Rings</a>
+                      <a class="nav-link" href="#">For Him</a>
                     </li>
 
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Bracelet</a>
+                      <a class="nav-link" href="#">For Her</a>
                     </li>
                     <li class="nav-item-lv2">
-                      <a class="nav-link" href="#">Necklace</a>
+                      <a class="nav-link" href="#">For Friends</a>
                     </li>
                   </ul>
                 </li>
@@ -118,7 +118,7 @@
       <div class="cart__prices">
         <span class="cart__prices-item">Total</span>
         <span class="cart__prices-total"
-          >$ <span class="cart-total"></span>
+          ><span class="cart-total"></span>đ
         </span>
       </div>
     </div>
@@ -139,10 +139,10 @@
                 alt=""
               />
               <div class="carousel-caption">
-                <p class="caption-subtitle">STYLISH JEWELRY</p>
+                <p class="caption-subtitle">EMOTIONAL BOX</p>
                 <h1 class="caption-title">
-                  Discovery golden <br />
-                  jewelry collection
+                  New <br />
+                  collection
                 </h1>
 
                 <a href="#" class="button">Discover Now</a>
@@ -341,10 +341,10 @@
                     </div>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">The Loving Heart Pendant</h4>
+                      <h4 class="pd-title">Him The KRAFT</h4>
                     </a>
                     <p class="pd-price" id="sale">
-                      <span>$850.00</span> $650.00
+                      <span>380,000đ</span> 320,000đ
                     </p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
@@ -400,9 +400,9 @@
                     </a>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">Dangler Brass Hoop Earring</h4>
+                      <h4 class="pd-title">Santa The KRAFT</h4>
                     </a>
-                    <p class="pd-price">$350.00</p>
+                    <p class="pd-price">350,000đ</p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
                         <img
@@ -463,10 +463,10 @@
                     </div>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">The Mariatte Hoop Earrings</h4>
+                      <h4 class="pd-title">Say Cheese The KRAFT</h4>
                     </a>
                     <p class="pd-price" id="sale">
-                      <span>$250.00</span> $200.00
+                      <span>220,000đ</span> 180,000đ
                     </p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
@@ -522,11 +522,9 @@
                     </a>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">
-                        Melorra The Blind Fold Diamond Earrings
-                      </h4>
+                      <h4 class="pd-title">Apology The KRAFT</h4>
                     </a>
-                    <p class="pd-price">$151.00 - $750.00</p>
+                    <p class="pd-price">150,000đ</p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
                         <img
@@ -585,9 +583,9 @@
                     </a>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">Dangler Brass Hoop Earring</h4>
+                      <h4 class="pd-title">Santa The KRAFT</h4>
                     </a>
-                    <p class="pd-price">$350.00</p>
+                    <p class="pd-price">320,000đ</p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
                         <img
@@ -648,10 +646,10 @@
                     </div>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">The Mariatte Hoop Earrings</h4>
+                      <h4 class="pd-title">Say Cheese The KRAFT</h4>
                     </a>
                     <p class="pd-price" id="sale">
-                      <span>$250.00</span> $200.00
+                      <span>180,000đ</span> 120,000đ
                     </p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
@@ -707,11 +705,9 @@
                     </a>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">
-                        Melorra The Blind Fold Diamond Earrings
-                      </h4>
+                      <h4 class="pd-title">Apology The KRAFT</h4>
                     </a>
-                    <p class="pd-price">$151.00 - $750.00</p>
+                    <p class="pd-price">150,000đ</p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
                         <img
@@ -764,11 +760,9 @@
                     </a>
 
                     <a href="product-ring.html">
-                      <h4 class="pd-title">
-                        Amethyst Ring For Girls and Women
-                      </h4>
+                      <h4 class="pd-title">Daily Stuff The KRAFT</h4>
                     </a>
-                    <p class="pd-price">$180.00</p>
+                    <p class="pd-price">180,000đ</p>
                     <div class="pd-hover">
                       <a href="product-ring.html">
                         <img
