--- a/category.html
+++ b/category.html
@@ -17,11 +17,10 @@
       media="all"
     />
     <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/price_range_style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <title>Categories</title>
   </head>
   <body>
@@ -503,9 +502,8 @@
     <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
-    <script src="./js/products.js"></script>
-    <!-- <script src="./js/displayProduct.js"></script> -->
+    <script src="./js/main.min.js"></script>
+    <script src="./js/products.min.js"></script>
 
     <script src="./js/price_range_script.js"></script>
     <script
