--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
 
     <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <title>OH'KRAFT</title>
   </head>
@@ -1140,8 +1140,8 @@
       sr.reveal(`.blog-content`, { interval: 100 });
     </script>
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
-    <script src="./js/products.js"></script>
+    <script src="./js/main.min.js"></script>
+    <script src="./js/products.min.js"></script>
 
     <script>
       let swiper = new Swiper(".testimonial-content", {
