--- a/about-us.html
+++ b/about-us.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <title>About Us</title>
   </head>
   <body>
@@ -408,7 +408,8 @@
     <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.min.js"></script>
+    <script src="./js/products.min.js"></script>
 
     <script>
       let swiper = new Swiper(".about-us-image-slider", {
