--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -375,7 +375,7 @@
     <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
-    <script src="./js/products.js"></script>
+    <script src="./js/main.min.js"></script>
+    <script src="./js/products.min.js"></script>
   </body>
 </html>
