--- a/product-ring.html
+++ b/product-ring.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <title>Her the KRAFT</title>
   </head>
   <body>
@@ -1044,8 +1044,8 @@
     <script src="./js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="./js/main.js"></script>
-    <script src="./js/products.js"></script>
+    <script src="./js/main.min.js"></script>
+    <script src="./js/products.min.js"></script>
 
     <script>
       let swiper = new Swiper(".pd-swiper", {
